fixed word wrap on feeds on January 27 ,2019 By Beshoy Farag

--- a/socialsite/Main/static/css/main.css
+++ b/socialsite/Main/static/css/main.css
@@ -78,7 +78,7 @@ button.signup {
 
   margin: 1px;
 
-  word-wrap: normal ;
+  word-wrap: break-word ;
 
 }
 .wordwarp {
